--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@angular/service-worker": "~12.0.0",
+    "bootstrap": "^5.0.1",
+    "ng-zorro-antd": "^11.4.1",
+    "ngx-pagination": "^5.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
